# slicer-agent-engine

./: README.md  pyproject.toml  requirements-agent.txt  requirements.txt
examples/: curl_examples.md
scripts/: benchmark_UCSF_PDGM.py  l0l1_smoke_test.py  manual_test.py  open_ai_auto.py  open_ai_test.py  openai_ai_manual.py
slicer_agent_engine/: __init__.py  config.py  gemini_video.py  mcp_server.py  openai_common.py  server_http.py  session.py  slicer_client.py  slicer_launcher.py  tools.py  video_renderer.py
slicer_agent_engine/agents/: __init__.py  openai_auto_agent.py
slicer_agent_engine/benchmarking/: __init__.py  judge.py  ucsf_pdgm.py
slicer_side/: bootstrap_webserver.py  slicer_agent_bridge.py
